# PiccoloDev

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_macos.sh
engine/: CMakeLists.txt
engine/asset/global/: render_pipeline.config.json  rendering.global.json
engine/asset/level/: 1-2.level.json
engine/asset/objects/character/npc/: npc.object.json
engine/asset/objects/character/player/: player.object.json
engine/asset/scripts/player/: hello_world.lua  set_jump_height.lua
engine/asset/world/: hello.world.json
engine/configs/deployment/: PiccoloGame.ini
engine/configs/development/: PiccoloGame.ini
engine/shader/glsl/: color_grading.frag  combine_ui.frag  post_process.vert  vignette.frag  vignette.vert
engine/source/editor/source/: editor.cpp  editor_ui.cpp
engine/source/game/: CMakeLists.txt
engine/source/game/include/: editor_file_service.h  game.h  game_file_service.h  game_global_context.h  game_input_manager.h  game_scene_manager.h  game_ui.h
engine/source/game/resource/: PiccoloGame.rc
engine/source/game/source/: game.cpp  game_file_service.cpp  game_global_context.cpp  game_input_manager.cpp  game_scene_manager.cpp  game_ui.cpp  main.cpp
engine/source/meta_parser/parser/generator/: reflection_generator.cpp  serializer_generator.cpp
engine/source/meta_parser/parser/language_types/: class.cpp
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: timer.h
engine/source/runtime/core/log/: log_system.cpp
engine/source/runtime/core/math/: math.h
engine/source/runtime/function/animation/: animation_fsm.cpp  animation_fsm.h  pose.cpp  pose.h  skeleton.cpp  skeleton.h
engine/source/runtime/function/character/: character.cpp
engine/source/runtime/function/controller/: character_controller.cpp  character_controller.h  npc_character_controller.cpp  npc_character_controller.h
engine/source/runtime/function/ecs/: component_array.cpp  component_array.h  component_manager.cpp  component_manager.h  coordinator.cpp  coordinator.h  entity_manager.cpp  entity_manager.h  system.h  system_manager.cpp  system_manager.h
engine/source/runtime/function/framework/component/animation/: animation_component.cpp  animation_component.h
engine/source/runtime/function/framework/component/lua/: lua_component.cpp  lua_component.h
engine/source/runtime/function/framework/component/motor/: motor_component.cpp  npc_motor_component.cpp  npc_motor_component.h
engine/source/runtime/function/framework/component/sound/: sound_component.cpp  sound_component.h
engine/source/runtime/function/framework/level/: level_debugger.cpp  level_debugger.h
engine/source/runtime/function/framework/object/: object.cpp  object.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/physics/: physics_scene.cpp  physics_scene.h
engine/source/runtime/function/physics/jolt/: utils.h
engine/source/runtime/function/render/: render_common.h  render_helper.cpp  render_pass.h  render_pipeline.cpp  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_scene.cpp  window_system.cpp  window_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_buffer.cpp  debug_draw_buffer.h  debug_draw_context.cpp  debug_draw_context.h  debug_draw_font.cpp  debug_draw_font.h  debug_draw_group.cpp  debug_draw_group.h  debug_draw_manager.cpp  debug_draw_manager.h  debug_draw_pipeline.cpp  debug_draw_pipeline.h  debug_draw_primitive.cpp
engine/source/runtime/function/render/interface/: rhi.h  rhi_file_includer.h
engine/source/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.h  vulkan_vma.cpp
engine/source/runtime/function/render/passes/: main_camera_pass.cpp  main_camera_pass.h  ui_pass.cpp
engine/source/runtime/function/sound/: sound_manager.cpp  sound_manager.h
engine/source/runtime/platform/path/: path.cpp
engine/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/runtime/resource/res_type/common/: object.h
engine/source/runtime/resource/res_type/components/: lua_script.cpp  motor.cpp  motor.h  sound.h
engine/source/runtime/resource/res_type/data/: animation_clip.h  blend_state.h  sound_data.h
scripts/: generate_lut.py  generate_lut_fix.py  vis_lut.py
